2001-03-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* configure.in, aclocal.m4, config.h.in:
	    Using experimental  autoconf 2.49d  mandated couple of
	    changes...

2001-03-02  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* README.UPGRADING:
	    Added a note about the ALTERED default locations
	    of  zmailer.conf  and  mail.conf  files.

	* man/smtpserver.8, proto/smtpserver.conf.in:
	    Fix up the tcp-wrapper related documentation, and the default
	    stuff in the  smtpserver.conf  template.

	* scheduler/threads.c:
	    Print the gauges of message counts in the queue with SIGNED
	    values, thus making underflows (negatives) more obvious.

2001-03-01  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mailq.c:
	    Embarassing uninitialized array elements used for checking
	    if loop ends - Tomasz Bojakowski <mad@devil.inside.pin.pl>
	    reported errors.

2001-02-27  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/smtp/smtp.c:
	    At  smtp_sync()  when running in PIPELINING, if the
	    MAIL FROM has produced 400 or 500 series response,
	    do fault the RCPT TO responses in every case.
	    (With EX_UNAVAILABLE for 500-series, not EX_TEMPFAIL.)

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Track Z_read() return errno code more properly to
	    the 'Session closed w/o QUIT' log report.
	    Case where this was needed was actually some firewall
	    product which f**d OUTBOUND SMTP session of raporter...

2001-02-26  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* utils/listexpand.c, transports/smtp/smtp.c, include/ta.h,
	  transports/libta/ctlopen.c:
	    Implemented "EZMLM-alike" listexpander which does
	    the envelope MAIL FROM address content rewrite at
	    tne outgoing SMTP session.  This is done with 'DSN'
	    dataentry  EZMLM=  which is presumed to have valid
	    stuff to be appended to the localpart of the address
	    envelope:  '+recipient=40address.dom', for example.
