@@ -1,5 +1,9 @@
 2001-03-08  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
+	* transports/smtp/smtp.c:
+	    At response wait timeout, do have a GOAL TIME of when
+	    to timeout, not returning to it over and over again..
+
 	* configure.in, aclocal.m4, config.h.in:
 	    Using experimental  autoconf 2.49d  mandated couple of
 	    changes...
